--- a/.github/workflows/weather_update.yml
+++ b/.github/workflows/weather_update.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 4 * * *'  # 运行于每天UTC 4:00 (相当于Halifax时间午夜0:00)
   workflow_dispatch:  # 允许手动触发
 
+permissions:
+  contents: write  # 添加写入权限
+
 jobs:
   update-weather:
     runs-on: ubuntu-latest
@@ -14,6 +17,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -39,6 +43,8 @@ jobs:
         git config --global user.name "github-actions[bot]"
         
     - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         echo "Checking for changes..."
         git status
@@ -50,5 +56,5 @@ jobs:
           echo "Committing changes..."
           git commit -m "Update weather data [skip ci]"
           echo "Pushing changes..."
-          git push
+          git push https://${GITHUB_TOKEN}@github.com/oushou111/halifax-weather.git HEAD:main
         fi
