--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   update-weather:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # 添加写入权限
     
     steps:
     - name: Checkout repository
