--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 requests==2.31.0
-pandas==2.1.4
-google-cloud-bigquery
-pandas-gbq
+pandas==2.1.0
+google-cloud-bigquery==3.11.4
+pandas-gbq==0.19.2
+google-auth==2.22.0
